tests/algorithms/x/Java/hashes/sha256.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden476_sha2563758798706/001/Main.java:24: error: incompatible types: String cannot be converted to int[]
            System.out.println(bytes_to_hex(((int[])(_sha256("Python")))));
                                                             ^
/tmp/TestJavaTranspiler_Algorithms_Golden476_sha2563758798706/001/Main.java:25: error: incompatible types: String cannot be converted to int[]
            System.out.println(bytes_to_hex(((int[])(_sha256("hello world")))));
                                                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
